style: XML Button padding 추가, background 수정

--- a/app/src/main/res/layout/activity_detail_info.xml
+++ b/app/src/main/res/layout/activity_detail_info.xml
@@ -21,10 +21,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:text="@string/division"
         android:textColor="@color/warm_grey"
         android:textSize="12sp"
@@ -38,7 +36,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="48dp"
         android:text="@string/stock_code"
         android:textColor="@color/warm_grey"
@@ -51,7 +48,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
         android:layout_marginTop="4dp"
         android:text="@string/stock_name"
         android:textColor="@color/black"
@@ -65,7 +61,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
         android:layout_marginTop="4dp"
         android:text="@string/stock_money"
         android:textColor="@color/black"
@@ -92,7 +87,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="26dp"
         android:text="@string/increase_money"
         android:textColor="@color/pastel_red"
@@ -174,7 +168,7 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Chart"
+            android:text="@string/chart"
             android:textSize="48sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -186,36 +180,40 @@
     <Button
         android:id="@+id/button_one_day"
         style="@style/Medium"
-        android:layout_width="0dp"
-        android:layout_height="28dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
         android:layout_marginBottom="44dp"
         android:background="@drawable/bg_graph_button"
-        android:text="@string/day"
-        android:padding="0dp"
-        android:minHeight="0dp"
         android:minWidth="0dp"
+        android:minHeight="48dp"
+        android:paddingStart="8dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="8dp"
+        android:paddingBottom="8dp"
+        android:text="@string/day"
         android:textColor="@color/black"
         android:textSize="12sp"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toTopOf="@+id/button_buying"
         app:layout_constraintEnd_toStartOf="@+id/button_one_week"
         app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent"
-        app:backgroundTint="@null"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button_one_week"
         style="@style/Medium"
-        android:layout_width="0dp"
-        android:layout_height="28dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:padding="0dp"
-        android:minHeight="0dp"
-        android:minWidth="0dp"
         android:layout_marginBottom="44dp"
         android:background="@drawable/bg_graph_button"
+        android:minWidth="0dp"
+        android:minHeight="48dp"
+        android:paddingStart="4dp"
+        android:paddingTop="4dp"
+        android:paddingEnd="4dp"
+        android:paddingBottom="4dp"
         android:text="@string/one_week"
         android:textColor="@color/black"
         android:textSize="12sp"
@@ -227,15 +225,17 @@
     <Button
         android:id="@+id/button_one_month"
         style="@style/Medium"
-        android:layout_width="0dp"
-        android:layout_height="28dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginBottom="44dp"
-        android:padding="0dp"
-        android:minHeight="0dp"
-        android:minWidth="0dp"
         android:background="@drawable/bg_graph_button"
+        android:minWidth="0dp"
+        android:minHeight="48dp"
+        android:paddingStart="4dp"
+        android:paddingTop="4dp"
+        android:paddingEnd="4dp"
+        android:paddingBottom="4dp"
         android:text="@string/one_month"
         android:textColor="@color/black"
         android:textSize="12sp"
@@ -248,15 +248,17 @@
     <Button
         android:id="@+id/button_three_month"
         style="@style/Medium"
-        android:layout_width="0dp"
-        android:layout_height="28dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginBottom="44dp"
-        android:padding="0dp"
-        android:minHeight="0dp"
-        android:minWidth="0dp"
         android:background="@drawable/bg_graph_button"
+        android:minWidth="0dp"
+        android:minHeight="48dp"
+        android:paddingStart="4dp"
+        android:paddingTop="4dp"
+        android:paddingEnd="4dp"
+        android:paddingBottom="4dp"
         android:text="@string/three_month"
         android:textColor="@color/black"
         android:textSize="12sp"
@@ -268,17 +270,18 @@
     <Button
         android:id="@+id/button_one_year"
         style="@style/Medium"
-        android:layout_width="0dp"
-        android:layout_height="28dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginRight="12dp"
+        android:layout_marginEnd="2dp"
         android:layout_marginBottom="44dp"
-        android:padding="0dp"
-        android:minHeight="0dp"
-        android:minWidth="0dp"
         android:background="@drawable/bg_graph_button"
+        android:minWidth="0dp"
+        android:minHeight="48dp"
+        android:paddingStart="4dp"
+        android:paddingTop="4dp"
+        android:paddingEnd="4dp"
+        android:paddingBottom="4dp"
         android:text="@string/one_year"
         android:textColor="@color/black"
         android:textSize="12sp"
@@ -291,44 +294,37 @@
         android:id="@+id/button_buying"
         style="@style/Bold"
         android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="16dp"
-        android:padding="0dp"
-        android:minHeight="0dp"
-        android:minWidth="0dp"
+        android:layout_marginBottom="24dp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
         android:background="@drawable/bg_buying_button"
         android:text="@string/buying"
         android:textColor="@color/white"
         android:textSize="20sp"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button_selling"
         app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent"
-        app:backgroundTint="@null"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button_selling"
         style="@style/Bold"
         android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
-        android:padding="0dp"
-        android:minHeight="0dp"
-        android:minWidth="0dp"
+        android:layout_marginBottom="24dp"
         android:background="@drawable/bg_selling_button"
         android:text="@string/selling"
         android:textColor="@color/white"
         android:textSize="20sp"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button_buying"
-        app:backgroundTint="@null"/>
+        app:layout_constraintStart_toEndOf="@+id/button_buying" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
