--- a/app/src/main/res/layout/dialog_util_selling.xml
+++ b/app/src/main/res/layout/dialog_util_selling.xml
@@ -30,7 +30,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
             android:text="@string/stock_name"
             android:textSize="18sp"
             app:layout_constraintEnd_toStartOf="@+id/text_view_two_stock"
@@ -44,7 +43,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
             android:layout_marginTop="8dp"
             android:text="@string/two_stock"
             android:textSize="18sp"
@@ -71,7 +69,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
             android:text="@string/total"
             android:textSize="14sp"
             app:layout_constraintEnd_toStartOf="@+id/text_view_total_money"
@@ -146,9 +143,8 @@
             android:id="@+id/button_cancel"
             style="@style/White_Bold"
             android:layout_width="0dp"
-            android:layout_height="48dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
             android:layout_marginBottom="16dp"
             android:background="@drawable/bg_cancel_button"
             android:text="@string/cancel"
@@ -161,11 +157,9 @@
             android:id="@+id/button_selling"
             style="@style/White_Bold"
             android:layout_width="0dp"
-            android:layout_height="48dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
             android:background="@drawable/bg_selling_button"
             android:text="@string/selling"
