--- a/app/src/main/res/layout/activity_buying.xml
+++ b/app/src/main/res/layout/activity_buying.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraint_layout_selling"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -30,7 +29,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
             android:text="@string/recent"
             android:textSize="12sp"
             app:layout_constraintEnd_toStartOf="@+id/text_view_recent_money"
@@ -93,7 +91,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
             android:text="@string/total"
             android:textSize="14sp"
             app:layout_constraintEnd_toStartOf="@+id/text_view_total_money"
@@ -160,7 +157,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
             android:text="@string/money_unit"
             android:textColor="@color/pastel_red"
             android:textSize="14sp"
@@ -204,8 +200,7 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/table_layout_keypad"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/table_layout_keypad">
+        app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/button_max_buying"
@@ -215,16 +210,16 @@
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
             android:background="@drawable/bg_all_buying_button"
             android:text="@string/max_buying"
             android:textSize="18sp"
+            app:backgroundTint="@null"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:backgroundTint="@null"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
     </FrameLayout>
 
@@ -233,18 +228,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/button_do_buying"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frame_layout_max">
+        app:layout_constraintBottom_toTopOf="@+id/frame_layout_selling">
 
-        <TableRow>
 
-        </TableRow>
         <TableRow>
 
             <Button
-                app:backgroundTint="@null"
                 android:id="@+id/button_one"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -254,10 +243,10 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/one"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                app:backgroundTint="@null" />
 
             <Button
-                app:backgroundTint="@null"
                 android:id="@+id/button_two"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -267,10 +256,10 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/two"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                app:backgroundTint="@null" />
 
             <Button
-                app:backgroundTint="@null"
                 android:id="@+id/button_three"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -280,13 +269,13 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/three"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                app:backgroundTint="@null" />
         </TableRow>
 
         <TableRow>
 
             <Button
-                app:backgroundTint="@null"
                 android:id="@+id/button_four"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -296,10 +285,10 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/four"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                app:backgroundTint="@null" />
 
             <Button
-                app:backgroundTint="@null"
                 android:id="@+id/button_five"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -309,10 +298,10 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/five"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                app:backgroundTint="@null" />
 
             <Button
-                app:backgroundTint="@null"
                 android:id="@+id/button_six"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -322,13 +311,13 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/six"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                app:backgroundTint="@null" />
         </TableRow>
 
         <TableRow>
 
             <Button
-                app:backgroundTint="@null"
                 android:id="@+id/button_seven"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -338,10 +327,10 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/seven"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                app:backgroundTint="@null" />
 
             <Button
-                app:backgroundTint="@null"
                 android:id="@+id/button_eight"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -351,10 +340,10 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/eight"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                app:backgroundTint="@null" />
 
             <Button
-                app:backgroundTint="@null"
                 android:id="@+id/button_nine"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -364,13 +353,13 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/nine"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                app:backgroundTint="@null" />
         </TableRow>
 
         <TableRow>
 
             <Button
-                app:backgroundTint="@null"
                 android:id="@+id/button_all_delete"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -381,10 +370,10 @@
                 android:paddingBottom="20dp"
                 android:stateListAnimator="@null"
                 android:text="@string/all_delete"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                app:backgroundTint="@null" />
 
             <Button
-                app:backgroundTint="@null"
                 android:id="@+id/button_zero"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -394,7 +383,8 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/zero"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                app:backgroundTint="@null" />
 
             <ImageButton
                 android:id="@+id/button_back"
@@ -408,31 +398,44 @@
                 android:paddingTop="20dp"
                 android:paddingEnd="32dp"
                 android:paddingBottom="18dp"
+                android:contentDescription="@string/EmptyImage"
                 android:src="@drawable/ic_backspace_24_dp"
                 android:stateListAnimator="@null" />
         </TableRow>
 
     </TableLayout>
 
-    <Button
-        app:backgroundTint="@null"
-        android:id="@+id/button_do_buying"
-        style="@style/White_Bold"
+    <FrameLayout
+        android:id="@+id/frame_layout_selling"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/bg_buying_button"
-        android:text="@string/do_buying"
-        android:textSize="18sp"
+        android:background="@color/white"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/table_layout_keypad" />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+            android:id="@+id/button_buying"
+            style="@style/White_Bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/bg_buying_button"
+            android:text="@string/buying"
+            android:textSize="18sp"
+            app:backgroundTint="@null"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </FrameLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
