--- a/app/src/main/res/layout/activity_selling.xml
+++ b/app/src/main/res/layout/activity_selling.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraint_layout_selling"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -30,7 +29,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
             android:text="@string/recent"
             android:textSize="12sp"
             app:layout_constraintEnd_toStartOf="@+id/text_view_recent_money"
@@ -93,7 +91,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
             android:text="@string/total"
             android:textSize="14sp"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -214,7 +211,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
             android:layout_marginTop="8dp"
             android:text="@string/lack"
             android:textColor="@color/pastel_red"
@@ -248,8 +244,7 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/table_layout_keypad"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/table_layout_keypad">
+        app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/button_max_selling"
@@ -259,16 +254,16 @@
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
             android:background="@drawable/bg_all_selling_button"
             android:text="@string/max_selling"
             android:textSize="18sp"
+            app:backgroundTint="@null"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:backgroundTint="@null"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
     </FrameLayout>
 
@@ -277,14 +272,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/button_do_selling"
+        app:layout_constraintBottom_toTopOf="@+id/frame_layout_selling"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frame_layout_max">
+        app:layout_constraintStart_toStartOf="parent">
 
-        <TableRow>
-
-        </TableRow>
         <TableRow>
 
             <Button
@@ -298,7 +289,7 @@
                 android:stateListAnimator="@null"
                 android:text="@string/one"
                 android:textSize="20sp"
-                app:backgroundTint="@null"/>
+                app:backgroundTint="@null" />
 
             <Button
                 android:id="@+id/button_two"
@@ -311,7 +302,7 @@
                 android:stateListAnimator="@null"
                 android:text="@string/two"
                 android:textSize="20sp"
-                app:backgroundTint="@null"/>
+                app:backgroundTint="@null" />
 
             <Button
                 android:id="@+id/button_three"
@@ -324,7 +315,7 @@
                 android:stateListAnimator="@null"
                 android:text="@string/three"
                 android:textSize="20sp"
-                app:backgroundTint="@null"/>
+                app:backgroundTint="@null" />
         </TableRow>
 
         <TableRow>
@@ -340,7 +331,7 @@
                 android:stateListAnimator="@null"
                 android:text="@string/four"
                 android:textSize="20sp"
-                app:backgroundTint="@null"/>
+                app:backgroundTint="@null" />
 
             <Button
                 android:id="@+id/button_five"
@@ -353,7 +344,7 @@
                 android:stateListAnimator="@null"
                 android:text="@string/five"
                 android:textSize="20sp"
-                app:backgroundTint="@null"/>
+                app:backgroundTint="@null" />
 
             <Button
                 android:id="@+id/button_six"
@@ -366,7 +357,7 @@
                 android:stateListAnimator="@null"
                 android:text="@string/six"
                 android:textSize="20sp"
-                app:backgroundTint="@null"/>
+                app:backgroundTint="@null" />
         </TableRow>
 
         <TableRow>
@@ -382,7 +373,7 @@
                 android:stateListAnimator="@null"
                 android:text="@string/seven"
                 android:textSize="20sp"
-                app:backgroundTint="@null"/>
+                app:backgroundTint="@null" />
 
             <Button
                 android:id="@+id/button_eight"
@@ -395,7 +386,7 @@
                 android:stateListAnimator="@null"
                 android:text="@string/eight"
                 android:textSize="20sp"
-                app:backgroundTint="@null"/>
+                app:backgroundTint="@null" />
 
             <Button
                 android:id="@+id/button_nine"
@@ -425,7 +416,7 @@
                 android:stateListAnimator="@null"
                 android:text="@string/all_delete"
                 android:textSize="14sp"
-                app:backgroundTint="@null"/>
+                app:backgroundTint="@null" />
 
             <Button
                 android:id="@+id/button_zero"
@@ -438,7 +429,7 @@
                 android:stateListAnimator="@null"
                 android:text="@string/zero"
                 android:textSize="20sp"
-                app:backgroundTint="@null"/>
+                app:backgroundTint="@null" />
 
             <ImageButton
                 android:id="@+id/button_back"
@@ -452,31 +443,43 @@
                 android:paddingTop="20dp"
                 android:paddingEnd="32dp"
                 android:paddingBottom="18dp"
+                android:contentDescription="@string/EmptyImage"
                 android:src="@drawable/ic_backspace_24_dp"
                 android:stateListAnimator="@null" />
         </TableRow>
 
     </TableLayout>
 
-    <Button
-        android:id="@+id/button_do_selling"
-        style="@style/White_Bold"
+    <FrameLayout
+        android:id="@+id/frame_layout_selling"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/bg_selling_button"
-        android:text="@string/do_selling"
-        android:textSize="18sp"
+        android:background="@color/white"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/table_layout_keypad"
-        app:backgroundTint="@null"/>
+        app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+            android:id="@+id/button_selling"
+            style="@style/White_Bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/bg_selling_button"
+            android:text="@string/selling"
+            android:textSize="18sp"
+            app:backgroundTint="@null"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </FrameLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
