style: XML Button padding 추가, background 수정

--- a/app/src/main/res/layout/activity_detail_info.xml
+++ b/app/src/main/res/layout/activity_detail_info.xml
@@ -168,8 +168,8 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/chart"
             android:textSize="48sp"
+            android:text="@string/chart"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -180,17 +180,17 @@
     <Button
         android:id="@+id/button_one_day"
         style="@style/Medium"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
+        android:layout_marginStart="8dp"
         android:layout_marginBottom="44dp"
-        android:background="@drawable/bg_graph_button"
+        android:background="@drawable/bg_check_button"
         android:minWidth="0dp"
         android:minHeight="48dp"
         android:paddingStart="8dp"
-        android:paddingTop="8dp"
+        android:paddingTop="4dp"
         android:paddingEnd="8dp"
-        android:paddingBottom="8dp"
+        android:paddingBottom="4dp"
         android:text="@string/day"
         android:textColor="@color/black"
         android:textSize="12sp"
@@ -203,17 +203,17 @@
     <Button
         android:id="@+id/button_one_week"
         style="@style/Medium"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="44dp"
-        android:background="@drawable/bg_graph_button"
         android:minWidth="0dp"
         android:minHeight="48dp"
-        android:paddingStart="4dp"
+        android:paddingStart="8dp"
         android:paddingTop="4dp"
-        android:paddingEnd="4dp"
+        android:paddingEnd="8dp"
         android:paddingBottom="4dp"
+        android:background="@drawable/bg_graph_button"
         android:text="@string/one_week"
         android:textColor="@color/black"
         android:textSize="12sp"
@@ -225,17 +225,17 @@
     <Button
         android:id="@+id/button_one_month"
         style="@style/Medium"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="44dp"
-        android:background="@drawable/bg_graph_button"
         android:minWidth="0dp"
         android:minHeight="48dp"
-        android:paddingStart="4dp"
+        android:paddingStart="8dp"
         android:paddingTop="4dp"
-        android:paddingEnd="4dp"
+        android:paddingEnd="8dp"
         android:paddingBottom="4dp"
+        android:background="@drawable/bg_graph_button"
         android:text="@string/one_month"
         android:textColor="@color/black"
         android:textSize="12sp"
@@ -248,17 +248,17 @@
     <Button
         android:id="@+id/button_three_month"
         style="@style/Medium"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="44dp"
-        android:background="@drawable/bg_graph_button"
         android:minWidth="0dp"
         android:minHeight="48dp"
-        android:paddingStart="4dp"
+        android:paddingStart="8dp"
         android:paddingTop="4dp"
-        android:paddingEnd="4dp"
+        android:paddingEnd="8dp"
         android:paddingBottom="4dp"
+        android:background="@drawable/bg_graph_button"
         android:text="@string/three_month"
         android:textColor="@color/black"
         android:textSize="12sp"
@@ -270,18 +270,18 @@
     <Button
         android:id="@+id/button_one_year"
         style="@style/Medium"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="2dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="44dp"
-        android:background="@drawable/bg_graph_button"
         android:minWidth="0dp"
         android:minHeight="48dp"
-        android:paddingStart="4dp"
+        android:paddingStart="8dp"
         android:paddingTop="4dp"
-        android:paddingEnd="4dp"
+        android:paddingEnd="8dp"
         android:paddingBottom="4dp"
+        android:background="@drawable/bg_graph_button"
         android:text="@string/one_year"
         android:textColor="@color/black"
         android:textSize="12sp"
@@ -295,12 +295,14 @@
         style="@style/Bold"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/bg_buying_button"
+        android:minWidth="0dp"
+        android:minHeight="0dp"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
-        android:background="@drawable/bg_buying_button"
         android:text="@string/buying"
         android:textColor="@color/white"
         android:textSize="20sp"
@@ -315,9 +317,14 @@
         style="@style/Bold"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/bg_selling_button"
+        android:minWidth="0dp"
+        android:minHeight="0dp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
         android:text="@string/selling"
         android:textColor="@color/white"
         android:textSize="20sp"
