--- a/app/src/main/res/layout/activity_buying.xml
+++ b/app/src/main/res/layout/activity_buying.xml
@@ -234,6 +234,7 @@
         <TableRow>
 
             <Button
+                app:backgroundTint="@null"
                 android:id="@+id/button_one"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -243,10 +244,10 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/one"
-                android:textSize="20sp"
-                app:backgroundTint="@null" />
+                android:textSize="20sp" />
 
             <Button
+                app:backgroundTint="@null"
                 android:id="@+id/button_two"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -256,10 +257,10 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/two"
-                android:textSize="20sp"
-                app:backgroundTint="@null" />
+                android:textSize="20sp" />
 
             <Button
+                app:backgroundTint="@null"
                 android:id="@+id/button_three"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -269,13 +270,13 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/three"
-                android:textSize="20sp"
-                app:backgroundTint="@null" />
+                android:textSize="20sp" />
         </TableRow>
 
         <TableRow>
 
             <Button
+                app:backgroundTint="@null"
                 android:id="@+id/button_four"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -285,10 +286,10 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/four"
-                android:textSize="20sp"
-                app:backgroundTint="@null" />
+                android:textSize="20sp" />
 
             <Button
+                app:backgroundTint="@null"
                 android:id="@+id/button_five"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -298,10 +299,10 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/five"
-                android:textSize="20sp"
-                app:backgroundTint="@null" />
+                android:textSize="20sp" />
 
             <Button
+                app:backgroundTint="@null"
                 android:id="@+id/button_six"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -311,13 +312,13 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/six"
-                android:textSize="20sp"
-                app:backgroundTint="@null" />
+                android:textSize="20sp" />
         </TableRow>
 
         <TableRow>
 
             <Button
+                app:backgroundTint="@null"
                 android:id="@+id/button_seven"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -327,10 +328,10 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/seven"
-                android:textSize="20sp"
-                app:backgroundTint="@null" />
+                android:textSize="20sp" />
 
             <Button
+                app:backgroundTint="@null"
                 android:id="@+id/button_eight"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -340,10 +341,10 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/eight"
-                android:textSize="20sp"
-                app:backgroundTint="@null" />
+                android:textSize="20sp" />
 
             <Button
+                app:backgroundTint="@null"
                 android:id="@+id/button_nine"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -353,13 +354,13 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/nine"
-                android:textSize="20sp"
-                app:backgroundTint="@null" />
+                android:textSize="20sp" />
         </TableRow>
 
         <TableRow>
 
             <Button
+                app:backgroundTint="@null"
                 android:id="@+id/button_all_delete"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -370,10 +371,10 @@
                 android:paddingBottom="20dp"
                 android:stateListAnimator="@null"
                 android:text="@string/all_delete"
-                android:textSize="14sp"
-                app:backgroundTint="@null" />
+                android:textSize="14sp" />
 
             <Button
+                app:backgroundTint="@null"
                 android:id="@+id/button_zero"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -383,8 +384,7 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/zero"
-                android:textSize="20sp"
-                app:backgroundTint="@null" />
+                android:textSize="20sp" />
 
             <ImageButton
                 android:id="@+id/button_back"
