--- a/app/src/main/res/layout/activity_selling.xml
+++ b/app/src/main/res/layout/activity_selling.xml
@@ -236,6 +236,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
+
     <FrameLayout
         android:id="@+id/frame_layout_max"
         android:layout_width="match_parent"
@@ -272,13 +273,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/frame_layout_selling"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintBottom_toTopOf="@+id/frame_layout_selling">
+
 
         <TableRow>
 
             <Button
+                app:backgroundTint="@null"
                 android:id="@+id/button_one"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -288,10 +289,10 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/one"
-                android:textSize="20sp"
-                app:backgroundTint="@null" />
+                android:textSize="20sp" />
 
             <Button
+                app:backgroundTint="@null"
                 android:id="@+id/button_two"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -301,10 +302,10 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/two"
-                android:textSize="20sp"
-                app:backgroundTint="@null" />
+                android:textSize="20sp" />
 
             <Button
+                app:backgroundTint="@null"
                 android:id="@+id/button_three"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -314,13 +315,13 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/three"
-                android:textSize="20sp"
-                app:backgroundTint="@null" />
+                android:textSize="20sp" />
         </TableRow>
 
         <TableRow>
 
             <Button
+                app:backgroundTint="@null"
                 android:id="@+id/button_four"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -330,10 +331,10 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/four"
-                android:textSize="20sp"
-                app:backgroundTint="@null" />
+                android:textSize="20sp" />
 
             <Button
+                app:backgroundTint="@null"
                 android:id="@+id/button_five"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -343,10 +344,10 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/five"
-                android:textSize="20sp"
-                app:backgroundTint="@null" />
+                android:textSize="20sp" />
 
             <Button
+                app:backgroundTint="@null"
                 android:id="@+id/button_six"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -356,13 +357,13 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/six"
-                android:textSize="20sp"
-                app:backgroundTint="@null" />
+                android:textSize="20sp" />
         </TableRow>
 
         <TableRow>
 
             <Button
+                app:backgroundTint="@null"
                 android:id="@+id/button_seven"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -372,10 +373,10 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/seven"
-                android:textSize="20sp"
-                app:backgroundTint="@null" />
+                android:textSize="20sp" />
 
             <Button
+                app:backgroundTint="@null"
                 android:id="@+id/button_eight"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -385,10 +386,10 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/eight"
-                android:textSize="20sp"
-                app:backgroundTint="@null" />
+                android:textSize="20sp" />
 
             <Button
+                app:backgroundTint="@null"
                 android:id="@+id/button_nine"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -398,13 +399,13 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/nine"
-                android:textSize="20sp"
-                app:backgroundTint="@null" />
+                android:textSize="20sp" />
         </TableRow>
 
         <TableRow>
 
             <Button
+                app:backgroundTint="@null"
                 android:id="@+id/button_all_delete"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -415,10 +416,10 @@
                 android:paddingBottom="20dp"
                 android:stateListAnimator="@null"
                 android:text="@string/all_delete"
-                android:textSize="14sp"
-                app:backgroundTint="@null" />
+                android:textSize="14sp" />
 
             <Button
+                app:backgroundTint="@null"
                 android:id="@+id/button_zero"
                 style="@style/Brownish_grey_Medium"
                 android:layout_width="wrap_content"
@@ -428,8 +429,7 @@
                 android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/zero"
-                android:textSize="20sp"
-                app:backgroundTint="@null" />
+                android:textSize="20sp" />
 
             <ImageButton
                 android:id="@+id/button_back"
