refactor(structure): 패키지 구조 수정 및 그에 따른 코드 반영(kt)

--- a/app/src/main/res/layout/fragment_holding_stock.xml
+++ b/app/src/main/res/layout/fragment_holding_stock.xml
@@ -5,7 +5,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        tools:context=".HoldingStockFragment"
+        tools:context=".feature.common.HoldingStockFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <androidx.recyclerview.widget.RecyclerView
