--- a/app/src/main/res/layout/fragment_search_list.xml
+++ b/app/src/main/res/layout/fragment_search_list.xml
@@ -4,4 +4,4 @@
     android:id="@+id/recycler_view_search"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchListFragment" />
+    tools:context=".feature.search.SearchListFragment" />
