--- a/app/src/main/res/layout/fragment_wallet_transaction.xml
+++ b/app/src/main/res/layout/fragment_wallet_transaction.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".WalletTransactionFragment"
+    tools:context=".feature.wallet.WalletTransactionFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
