--- a/app/src/main/res/layout/fragment_stock_list.xml
+++ b/app/src/main/res/layout/fragment_stock_list.xml
@@ -5,11 +5,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".feature.common.HoldingStockFragment"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent">
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcview_holdingstock"
+            android:id="@+id/rcview_stocklist"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:overScrollMode="never"
