--- a/app/src/main/res/layout/fragment_interest_stock_none.xml
+++ b/app/src/main/res/layout/fragment_interest_stock_none.xml
@@ -4,56 +4,56 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         >
         <androidx.constraintlayout.widget.ConstraintLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content">
-
             <ImageView
-                android:id="@+id/imgview_app_nonestock"
+                android:id="@+id/imgview_app_noneinterest"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/ic_stock_none_48dp"
-                android:contentDescription="@string/app_nonestock"
+                android:background="@drawable/ic_interest_none_48dp"
+                android:contentDescription="@string/app_noneinterest"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
 
                 />
             <TextView
-                android:id="@+id/txtview_app_nonestock"
+                android:id="@+id/txtview_app_noneinterest"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/app_nonestock"
+                android:text="@string/app_noneinterest"
                 android:textColor="@color/warm_grey"
                 android:fontFamily="@font/noto_sans_kr_medium"
                 android:includeFontPadding="false"
                 android:textSize="18sp"
-                app:layout_constraintTop_toBottomOf="@+id/imgview_app_nonestock"
+                app:layout_constraintTop_toBottomOf="@+id/imgview_app_noneinterest"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="8dp"
                 />
             <TextView
-                android:id="@+id/txtview_app_nonestockadvice"
+                android:id="@+id/txtview_app_noneinterestadvice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/app_nonestockadvice"
+                android:text="@string/app_noneinterestadvice"
                 android:textColor="@color/warm_grey"
                 android:fontFamily="@font/noto_sans_kr_medium"
                 android:includeFontPadding="false"
                 android:textSize="10sp"
-                app:layout_constraintTop_toBottomOf="@+id/txtview_app_nonestock"
+                app:layout_constraintTop_toBottomOf="@+id/txtview_app_noneinterest"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginTop="8dp"
-
                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
