--- a/app/src/main/res/layout/layout_main_stocklistitem.xml
+++ b/app/src/main/res/layout/layout_main_stocklistitem.xml
@@ -59,6 +59,20 @@
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         android:layout_marginEnd="16dp"
         />
+
+    <TextView
+        android:id="@+id/txtview_wallet_transtype"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/noto_sans_kr_medium"
+        android:includeFontPadding="false"
+        android:text="@string/wallet_transtype"
+        android:textColor="@color/warm_grey"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toBottomOf="@+id/txtview_main_stocktotprice"
+        app:layout_constraintStart_toStartOf="@+id/txtview_main_markettype"
+        app:layout_constraintTop_toBottomOf="@+id/txtview_main_stockname"
+        />
         <TextView
             android:id="@+id/txtview_wallet_transcontent"
             android:layout_width="wrap_content"
@@ -123,6 +137,7 @@
             android:text="@string/main_stockpercent"
             app:layout_constraintTop_toBottomOf="@+id/txtview_main_stockprice"
             app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="4dp"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
