[Feature/main] 메인 화면 소켓까지 마무리 except 캐릭터 컴포 - 진 (#19)
* feat(secret): 최종 - 사라진 SocketApplication 복구

* feat(main-tab): contain, interest none의 경우 xml 중앙 정렬

* feat(status): main/status 받는 retrofit interface 메소드명 변경

* feat(secret): api key 서버 url 관리 local.properties에서만 하도록 변경

* feat(main-interest): main/interest 부분 받아서 recycler view 적용 및 empty view 적용

* feat(main-interest): main/interestStocks에서 data 배열 길이 < 1일 때 main interest none 프래그먼트로 교체

* feat(main-interest): 마무리 작업- 주석 정리

* feat(main-holding): 메인화면 보유종목 -> common/holding 부분 받아서 recycler view 적용 및 empty view 적용

* feat(main-holding): 기존 main holding 프래그먼트 -> common holding으로 변경

* feat(main-interest): 메인 화면 관심 종목에서 네트워크 비연결 시 empty 뷰로 보여주기

* feat(common-holding): common/holding rest api 적용 및 rcview 어댑터에도 바인딩 적용

* feat(main-interest): 메인화면 관심종목에 소켓 받아서 rcview adapter에 적용하는 것 완

* fix(main-interest): 소켓에서 전송받은 데이터 배열 길이 = 0 일 때도 기존 rest에서 받아 온 배열이 화면에 보이는 문제 FIX

* feat(common-holding): 메인 화면 보유 종목 서버와 소켓 연결

* feat(common-status): main/status => common/status로 변경

* feat(wallet-status): 지갑화면에서 상단의 예산 내역 부분 소켓, rest api 구현 및 탭 레이아웃

* docs(main): 메인화면 프래그먼트 코드 주석 더 상세히 달기

* fix(socket): 메인, 지갑 화면 소켓 화면 이동 시 disconnect 안되던 문제 해결

* feat(wallet): 지갑 화면 xml 수정(frame 교체 위해), 거래내역 탭 스피너 디자인

* refactor(wallet, main): 지갑화면, 메인화면 warning 없도록 코드 수정

* style(wallet): 지갑화면-거래내역에서 전체, 매수, 매도 버튼 -> 라디오버튼으로 변경 및 스타일 적용

--- a/app/src/main/res/layout/fragment_wallet_transaction.xml
+++ b/app/src/main/res/layout/fragment_wallet_transaction.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".WalletTransactionFragment"
+    tools:context=".feature.wallet.WalletTransactionFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -18,63 +18,62 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:paddingVertical="8dp"
         >
-        <Button
-            android:id="@+id/btn_wallet_filterall"
-            style="@style/Medium"
+        <RadioGroup
             android:layout_width="0dp"
-            android:layout_height="28dp"
-            android:layout_marginStart="16dp"
-            android:padding="0dp"
-            android:minHeight="0dp"
-            android:minWidth="0dp"
-            android:background="@drawable/bg_wallet_button"
-            app:backgroundTint="@null"
-            android:text="@string/wallet_filterall"
-            android:textColor="@color/black"
-            android:textSize="12sp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+        <RadioButton
+            android:checked="true"
+            android:id="@+id/btn_wallet_filterall"
+            android:layout_width="wrap_content"
+            android:layout_height="28dp"
+            android:background="@drawable/bg_wallet_radiobutton"
+            android:button="@null"
+            android:text="@string/wallet_filterall"
+            android:textColor="@drawable/bg_wallet_radiotext"
+            android:textAlignment="center"
+            android:paddingVertical="0dp"
+            android:layout_marginStart="16dp"
+            style="@style/Medium"
             />
 
-        <Button
+        <RadioButton
+            android:checked="false"
             android:id="@+id/btn_wallet_filterbuy"
-            style="@style/Medium"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="28dp"
-            android:layout_marginStart="4dp"
-            android:padding="0dp"
-            android:minHeight="0dp"
-            android:minWidth="0dp"
-            android:background="@drawable/bg_wallet_button"
-            app:backgroundTint="@null"
+            android:background="@drawable/bg_wallet_radiobutton"
+            android:button="@null"
             android:text="@string/wallet_filterbuy"
-            android:textColor="@color/black"
-            android:textSize="12sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/btn_wallet_filterall"
-            />
-        <Button
-            android:id="@+id/btn_wallet_filtersell"
-            style="@style/Medium"
-            android:layout_width="0dp"
-            android:layout_height="28dp"
+            android:textColor="@drawable/bg_wallet_radiotext"
+            android:textAlignment="center"
+            android:paddingVertical="0dp"
             android:layout_marginStart="4dp"
-            android:padding="0dp"
-            android:minHeight="0dp"
-            android:minWidth="0dp"
-            android:background="@drawable/bg_wallet_button"
-            app:backgroundTint="@null"
-            android:text="@string/wallet_filtersell"
-            android:textColor="@color/black"
-            android:textSize="12sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/btn_wallet_filterbuy"
+            style="@style/Medium"
             />
+        <RadioButton
+            android:checked="false"
+            android:id="@+id/btn_wallet_filtersell"
+            android:layout_width="wrap_content"
+            android:layout_height="28dp"
+            android:background="@drawable/bg_wallet_radiobutton"
+            android:button="@null"
+            android:text="@string/wallet_filtersell"
+            android:textColor="@drawable/bg_wallet_radiotext"
+            android:textAlignment="center"
+            android:paddingVertical="0dp"
+            android:layout_marginStart="4dp"
+            style="@style/Medium"
+            />
+        </RadioGroup>
         <Spinner
             android:id="@+id/spinner_wallet_filter"
             android:layout_width="88dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_round_border_4dp"
+            android:background="@drawable/bg_wallet_spinner"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -83,5 +82,14 @@
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <!-- 프래그먼트? 들어갈 자리? -->
+
+    <FrameLayout
+        android:id="@+id/frame_wallet_transaction_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toBottomOf="@+id/layout_wallet_transactionfilter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
