[Feature/wallet] 지갑 화면 거래 내역에서 REST로 <전체, 매수, 매도> 필터링 구현 (#20)
* feat(transaction): 전체, 매수, 매도 버튼 (라디오그룹)에 리스너 추가

* feat(transactions): 지갑 화면 거래 내역에서 REST 연결, 필터 적용(전체, 매수, 매도만)

* chore(status): 파이 차트 구현에 필요한 모듈 의존성 추가

* chore(status): 파이 차트 구현에 필요한 모듈 의존성 추가(버전 변경)

--- a/app/src/main/res/layout/fragment_wallet_transaction.xml
+++ b/app/src/main/res/layout/fragment_wallet_transaction.xml
@@ -19,6 +19,7 @@
         android:paddingVertical="8dp"
         >
         <RadioGroup
+            android:id="@+id/btn_wallet_radiogroup"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -86,10 +87,25 @@
     <FrameLayout
         android:id="@+id/frame_wallet_transaction_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/layout_wallet_transactionfilter"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        />
+        android:paddingBottom="44dp"
+        >
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rcview_wallet_stocklist"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:overScrollMode="never"
+                android:orientation="vertical"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
